--- a/frontend/src/components/SplashLandingPage/SplashLanding.css
+++ b/frontend/src/components/SplashLandingPage/SplashLanding.css
@@ -1,16 +1,5 @@
 
-.splash-container {
-    display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: 25% 25% 25% 25%;
-    grid-template-areas: 
-    "div1"
-    "div2"
-    "div3"
-    "div4";
-}
 .splash-div1{
-    grid-area: div1;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -20,22 +9,23 @@
     height: 100vh;
 }
 .splash-div2{
-    grid-area: div2;
     background-color: #5e7783 ;
     width: 100vw;
     height: 100vh;
 
 }
 .splash-div3 {
-    grid-area: div3;
     background-color: #193540;
     width: 100vw;
     height: 100vh;
 
 }
 .splash-div4 {
-    grid-area: div4;
-    background-color: #5e7783;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color: #e5232e;
     width: 100vw;
     height: 100vh;
 
@@ -97,58 +87,64 @@
 .symbols{
     display: flex;
     align-items: center;
-    justify-content:space-between;
+    justify-content:center;
     flex-direction: column;
     position: relative;
     border-radius: 180px;
-    margin-left: 40%;
+    margin-left: 39%;
     height: 350px;
     width: 350px;      
+    border: transparent;
 }
 
 .symbols2 {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: row;
-    position: absolute;
-    border-radius: 180px;
-    margin-left: 40%;
-    height: 350px;
-    width: 350px;
-    bottom: 338px;
-    z-index: 10;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-direction: row;
+        position: absolute;
+        border-radius: 180px;
+        margin-left: 27%;
+        height: 350px;
+        width: 700px;
+        bottom: 312px;
+        z-index: 10;
+       
 }
-.book,
 .crow,
-.moon,
 .ghost,
 .crossbones{
     height: 60px;
     width: 60px;
     font-size: 60px;
 }
-
-.book {
-    position: relative;
-    margin-top: 30px;
+.crossbones{
+    margin-left: 25px ;
 }
-
-.moon {
-    position: relative;
-    margin-bottom: 30px;
-}
-
 .crow {
     position: relative;
-    margin-left: 30px;
+    
 }
 
 .ghost {
     position: relative;
-    margin-right: 30px;
+    margin-right: 10px;
+    margin-left: 15px;
 }
 
+.s,
+.r {
+   color: white;
+   font-size:200px;
+   font-family: 'Nosifer',
+   cursive;
+}
+.s{
+    margin-left: 60px;
+}
+.r {
+    margin-right: 60px;
+}
 .description-div{
     display: flex;
     align-items: center;
@@ -194,4 +190,47 @@
     text-align: left;
     margin-left: 10%;
     margin-right: 50%;
+}
+
+.Sub-Rosa2 {
+    margin-top: 100px;
+    margin-bottom: 43px;
+    padding: 0;
+    border: none;
+    height: 83px;
+    font-size: 75px;
+    color: white;
+    font-family: 'Nosifer',
+        cursive;
+}
+.splash-section2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    position: relative;
+    text-align: center;
+}
+
+.note2 {
+    font-size: 1.3rem;
+    width: 300px;
+    font-weight: 700;
+    line-height: 1.5;
+    text-align: center;
+    color: white;
+}
+
+.login2 button,
+.createA2 button {
+    height: 44px;
+    width: 300px;
+}
+
+.login2 button {
+    background-color: #d2d6d1;
+}
+
+.createA2 button {
+    background-color: #5e7783;
 }
