--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
+    
 }
 
 #modal-background {
@@ -21,5 +21,8 @@
 
 #modal-content {
     position: absolute;
-    background-color: white;
+    background-color:white;
+    height: 650px;
+    width: 500px;
+    border-radius: 4px;
 }
