--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -24,6 +24,14 @@ body {
     position: fixed;
     
 }
+.sessionLinks{
+    display: flex;
+    align-items: flex-end;
+    flex-direction: row-reverse;
+    width: 100%;
+    height: 54px;
+    margin-top: 10px;
+}
 
 .sub {
     background-color: #5e7783;
@@ -41,3 +49,18 @@ body {
     width: 97px;  
     border-radius: 4px;  
 }
+.home,
+.user-icon{
+ height: 54px;
+ width: 120px;
+ font-family: 'Akaya Telivigala',
+ cursive;
+ font-size: 30px;
+ margin-left: 10px;
+}
+
+.home{
+    text-decoration: none;
+    color: black;
+}
+
