--- a/frontend/src/components/Dashboard/Dashboard.css
+++ b/frontend/src/components/Dashboard/Dashboard.css
@@ -1,29 +1,45 @@
-.main-container {
+.post-container {
     background-color: #193540;
-    height: 100vh;
-    width: 100vw;
     display: flex;
     align-items: center;
-    justify-content: center;
-    overflow: scroll;
     flex-direction: column;
+    padding-left: 80px;
+    width: 620px;
 }
 
 .posts{
-    min-width: 500px;
-   
+    margin-top: 10px;
+    max-height: 870px;
+    overflow: scroll;
+    align-self: end;
 }
+
+.posts::-webkit-scrollbar {
+    display: none;
+}
+
 .add-post{
-        margin-top: 20%;
-        display: flex;
-        align-items: center;
-        justify-content: space-evenly;
-        width: 500px;
-        height: 87px;
-        background-color: #d2d6d1;
-        border-radius: 4px;
-        padding: 0%;
-        
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 500px;
+    height: 87px;
+    background-color: #d2d6d1;
+    border-radius: 4px;
+    padding: 0%;     
+}
+
+.add-post-inner{
+    margin-top: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    height: 87px;
+    padding: 0%;
+}
+
+.add-post-outer{
+    align-self: end;
 }
 
 .video,
@@ -57,4 +73,37 @@ button:hover{
     background-color: #d2d6d1;
     justify-content:space-evenly;
   
+}
+
+.main-container {
+   display: flex;
+   flex-direction: row;
+   background-color: #193540;
+   justify-content: center;
+   height: 100vh;
+}
+
+.users-container{
+    width: 300px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.check-out{
+    font-size: 30px;
+    color: white;
+    font-family: 'Akaya Telivigala',
+    cursive;
+    margin-top: 100px;
+}
+.blog-span{
+    width: 100%;
+}
+
+.user-cards{
+    display: flex;
+    justify-content: end;
+    width: 300px;
+    flex-direction: column;
 }
