--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -64,3 +64,17 @@ body {
     color: black;
 }
 
+.profile-postion{
+    position: relative;
+}
+
+.profile-dropdown{
+    display: flex;
+    flex-direction: column;
+    margin-top: 75px;
+    position: absolute;
+    background-color:white;
+    border-radius: 4px;
+    z-index: 3;
+    right: 10px;
+}
