--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -71,10 +71,32 @@ body {
 .profile-dropdown{
     display: flex;
     flex-direction: column;
-    margin-top: 75px;
     position: absolute;
     background-color:white;
     border-radius: 4px;
     z-index: 3;
-    right: 10px;
+    right: 0px;
+    top: 5px;
+}
+
+.profile-user,
+.logout{
+    height: 30px;
+    width: 200px;
+    font-family: 'Akaya Telivigala',
+    cursive;
+    font-size: 20px;
+}
+
+.profile-user{
+    width: 200px;
+    border: 1px solid black;
+}
+
+.profile-user-div{
+    width: 200px;
+}
+
+.logout{
+    width: 200px;
 }
